# ToDoApp

./: CMakeLists.txt  Colors.h  Database.cpp  Database.h  Entry.cpp  Entry.h  MenuManager.cpp  MenuManager.h  README.md  ToDoApp.cpp  ToDoApp.sln  ToDoApp.vcxproj  ToDoApp.vcxproj.filters  UtilityFunctions.h
Resources/: Entries.json
